--- a/web/src/app/po/fitter-invoice-list/fitter-invoice-list.component.css
+++ b/web/src/app/po/fitter-invoice-list/fitter-invoice-list.component.css
@@ -17,8 +17,6 @@
     margin: 0;
 }
 
-
-
 .detail_icons i{
   background: #38a042e8;
   color: #fff;
@@ -30,4 +28,25 @@
   transition: .5s;
   cursor: pointer;
   box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.inputWidth{
+  width: 60px;
+  text-align: center;
+  color: #000;
+}
+
+.bcolor{
+  border: 1px solid red;
+  width: 60px;
+  text-align: center;
+  color: #000;
+}
+
+.inputselectWidth{
+  width: 75px;
+  text-align: center;
+  height: 24px;
+  font-size: 10px;
+  color: #000;
 }
