--- a/web/src/app/po/fitter-invoice/fitter-invoice.component.html
+++ b/web/src/app/po/fitter-invoice/fitter-invoice.component.html
@@ -141,12 +141,16 @@
                             <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                 <mat-form-field class="example-full-width mb-0">
                                     <mat-label>GST Type</mat-label>
-                                    <mat-select name="GSTType" [(ngModel)]="FitterMaster.GSTType" required
+                                    <mat-select *ngIf="FitterMaster.GSTPercentage == 0" name="GSTType" [(ngModel)]="FitterMaster.GSTType" required
                                         #GSTTypecontrol1 >
-                                        <mat-option  value="None" >None</mat-option>
-                                            <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
-                                            </mat-option>
+                                        <mat-option value="None">None</mat-option>
                                     </mat-select>
+
+                                    <mat-select *ngIf="FitterMaster.GSTPercentage != 0" name="GSTType" [(ngModel)]="FitterMaster.GSTType" required
+                                    #GSTTypecontrol1 >
+                                    <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}</mat-option>
+                                </mat-select>
+
                                 </mat-form-field>
                             </div>
                             <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
