--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -135,6 +135,7 @@
               <a href="javascript:void(0)" [routerLink]="['/companyPayment/expense']" id="collapseExample">Expense</a>
               <a href="javascript:void(0)" [routerLink]="['/companyPayment/payroll']" id="collapseExample">Payroll</a>
               <a href="javascript:void(0)" [routerLink]="['/companyPayment/pettyCash']" id="collapseExample">PettyCash</a>
+              <a href="javascript:void(0)" [routerLink]="['/companyPayment/payment']" id="collapseExample">Payment</a>
             </div>
           </div>
           <!-- companyadmin end company payment -->
