--- a/web/src/app/sale/bill/bill.component.css
+++ b/web/src/app/sale/bill/bill.component.css
@@ -90,3 +90,32 @@ input::-webkit-inner-spin-button {
     color: #fff;
     box-shadow: 1px 1px 10px #0003;
 }
+
+.edit_icon1 {
+    background: #1c1a9c;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 18px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+
+.inputWidth{
+    width: 70px;
+    text-align: center;
+    color: #000;
+    border: #f71a1c 1px solid;
+}
+.inputselectWidth{
+    width: 75px;
+    text-align: center;
+    font-size: 10px;
+    color: #000;
+    height: 25px;
+    border: #f71a1c 1px solid;
+}
