--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -108,6 +108,7 @@
               <a href="javascript:void(0)" [routerLink]="['/sale/billinglist',0]" id="collapseExample">Bill List</a>
               <a href="javascript:void(0)" [routerLink]="['/sale/customerList']" id="collapseExample">CustomerList</a>
               <a href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample">Doctor</a>
+              <a href="javascript:void(0)" [routerLink]="['/sale/commission']" id="collapseExample">Commission</a>
             </div>
           </div>
           <!-- companyadmin end Bliing -->
