--- a/web/src/app/company-payment/payment/payment.component.html
+++ b/web/src/app/company-payment/payment/payment.component.html
@@ -28,13 +28,17 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Payee Name</mat-label>
                                         <mat-select name="PayeeID" [(ngModel)]=" data.CustomerID">
-                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList">
+                                            <mat-option>
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}"></ngx-mat-select-search>
+                                            </mat-option>
+                                            <mat-option [value]="s.ID" *ngFor="let s of payeeList | nameFilter : searchValue ">
                                                 {{s.Name}} 
                                                 <span style="float: right;">{{s.MobileNo1}}</span>
                                             </mat-option>
                                         </mat-select>
                                         <mat-error>Payee is required</mat-error>
                                     </mat-form-field>
+
                                 </div>
                                 <div class="col-xl-1 col-md-1 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
